# MaaAzurLane

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  NOTICE.md  README.md  interface.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  resolution_support.yml
.github/workflows/: ci.yml
docs/: architecture.md  asset-sources.md  dataset.md  design-review.md  development.md  maa-project-interface.md  migration-from-alas.md  milestone-review.md  resolution.md  roadmap.md
reference/: calibration.json  source_index.json
resource/config/anchors/: home.json
resource/pipeline/: DailyBaseline.json  ReturnHome.json  Startup.json
src/maa_azurlane/: __init__.py
src/maa_azurlane/action/: __init__.py
src/maa_azurlane/calibration/: __init__.py  image.py  injector.py  layout.py  manifest.py  sources.py
src/maa_azurlane/dataset/: __init__.py  metadata.py
src/maa_azurlane/domain/: __init__.py
src/maa_azurlane/emulator/: __init__.py
src/maa_azurlane/layout/: __init__.py  anchor.py  detector.py  geometry.py  profile.py  service.py  transformer.py
src/maa_azurlane/ocr/: __init__.py
tests/: test_anchor_definition.py  test_calibration_injector.py  test_calibration_manifest.py  test_coordinate_transformer.py  test_dataset_metadata.py  test_layout.py  test_layout_builder.py  test_source_index.py
tests/screenshots/: home_cn_2400x1080_mumu12_001.json
tools/: capture_dataset.py  replay_screenshot.py  validate_pipeline.py
(+2 files in other folders)
